<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.cvut.fit.activities.MainActivity">


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/zero"
            android:textSize="40sp"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/pivot"
            android:layout_below="@+id/number"
            android:text="@string/main_plus" />

        <View
            android:id="@+id/pivot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/minus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/pivot"
            android:layout_below="@+id/number"
            android:text="@string/main_minus" />

        <Button
            android:id="@+id/slave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_show_only"
            android:layout_below="@id/minus"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/slave_for_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_grow_it_up"
            android:layout_below="@id/slave"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

    </RelativeLayout>
</ScrollView>